# pheval.llm

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  score_intermediate_results.py  select_runner.sh  tox.ini
.github/workflows/: mkdocs-deploy.yml  qc.yml
analysis/: PMID_to_date_extractor.py  count_dates.py  count_gpt_tokens.py  count_translated_prompts_and_copy.py  create_hf_datasets.py  create_ppkts_subsets.py  disease_in_ppktset.py  eval_diagnose_category.py  eval_manual_curation.py  eval_rft_subset.py  explore_no_reply.py  final_plot.R  grounding_failures.py  index.html  kruskal_test_script.py  leakage_exp.R  non_english_reply.py  phenopacket_subset_config.yaml  phenopackets_multilingual_stats.ipynb  plotter.R  ppkts_after_date.py  prepare_narrative.py  print_table.py  split_jsonl_multlingual.py  strict_scoring_draft.py  use_ppkt_subset.py  xlsx2babelon.py
analysis/time_ic/: disease_avail_knowledge.py  logit_predict_llm.py  rank_date_dict.pkl  rank_date_exploratory.py
caches/: cache_log.txt
config/: defaults.yaml
data/config/: cs-meditron3-70b.yaml  de-meditron3-70b.yaml  defaults.yaml  es-meditron3-70b.yaml  fr-meditron3-70b.yaml  ft-o4-mini-reticular.yaml  geminiflash.yaml  it-meditron3-70b.yaml  ja-meditron3-70b.yaml  medfound175b.yaml  medfound176b.yaml  meditron3-70b-it.yaml  meditron3-70b-multi-lingual.yaml  meditron3-70b.yaml  nl-meditron3-70b.yaml  o4-mini.yaml  tr-meditron3-70b.yaml  (+1 more)
docs/: analysis.md  ground.md  index.md  layout.md  reference.md  rft_poc.md  run.md  run_parameters.csv  setup.md
final_multilingual_output/: ppkts_4917set.txt
in_manual_curation/: run_parameters.csv
layout/: index.html
narrative_output/: results.yml
notebooks/: analyze_grounding_of_llms_diff_dx.ipynb  cborg_inferencer.ipynb  count_hpo_terms_genes_pubs.ipynb  exomiser-benchmark.py  exomiser-create.ipynb  gemini_flash_PREVIEW_and_plot.ipynb  grounding_summary.tsv  llmtext2jsonl.ipynb  medfound.ipynb  medfound_gemini_inferencer.ipynb  meditron2_id_locate.ipynb  o1_preview_disease_grounding_summary.tsv  orpha-prev.ipynb  plot_exomiser_o1MINI_o1PREVIEW_4o.ipynb  process_gpt_4o_and_plot.ipynb  process_gpt_o1_PREVIEW_and_plot.ipynb  process_gpt_o1_VIGNETTE.ipynb  process_hf_dataset.py  process_meditron_70b_PREVIEW_and_plot.ipynb  response-folder-transform.ipynb  responses-transform.ipynb  statistical-test.ipynb
out_manual_curation/: results.yml
reference/: index.html
run/: index.html
search/: search_index.json
setup/: index.html
tests/: test_glob_generator.py  test_mondo_score_utils.py
(+21866 files in other folders)
