[tool.poetry]
name = "malco"
version = "0.0.1"
description = "Multilingual Analysis of LLMs for Clinical Observations"
authors = ["Harry Caufield <jhc@lbl.gov>", "Justin Reese <justaddcoffee@gmail.com>", "Leonardo Chimirri <leonardo.chimirri@bih-charite.de>", "Enock Niyonkuru <enock.niyonkuru@jax.org>"]
readme = "README.md"
packages = [{include = "malco", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pheval = "^0.3.2"
setuptools = "^69.5.1"
shelved-cache = "^0.3.1"

[tool.poetry.plugins."pheval.plugins"]
template = "malco.runner:MalcoRunner"


[tool.poetry.group.dev.dependencies]
tox = "^4.15.0"
coverage = "^7.5.0"
pytest = "^7.1.2"
pylint = "^2.15.6"
pycodestyle = "^2.10.0"
pytest-cov = "^6.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
ontogpt = {git = "https://github.com/monarch-initiative/ontogpt.git", tag = "v1.0.3"}

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
